--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "dependencies": {
     "@reach/portal": "^0.11.2",
+    "@react-hook/window-scroll": "^1.3.0",
     "@vercel/fetch": "^6.1.0",
     "autoprefixer": "^10.2.4",
     "body-scroll-lock": "^3.1.5",
@@ -40,6 +41,7 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-merge-refs": "^1.1.0",
+    "react-motion": "^0.5.2",
     "react-ticker": "^1.2.2",
     "shopify-buy": "^2.11.0",
     "swr": "^0.4.0",
