--- a/package.json
+++ b/package.json
@@ -42,7 +42,9 @@
     "react-dom": "^17.0.1",
     "react-merge-refs": "^1.1.0",
     "react-motion": "^0.5.2",
+    "react-reveal": "^1.2.2",
     "react-ticker": "^1.2.2",
+    "react-transition-group": "^4.4.1",
     "shopify-buy": "^2.11.0",
     "swr": "^0.4.0",
     "tabbable": "^5.1.5",
