--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "node": "14.x"
   },
   "dependencies": {
+    "@elgorditosalsero/react-gtm-hook": "^2.0.7",
     "@reach/portal": "^0.11.2",
     "@react-hook/window-scroll": "^1.3.0",
     "@vercel/fetch": "^6.1.0",
